--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,11 +5,11 @@
 Accés au <a href="/profile">/profil</a>
 <form method="post" action="/login">
   <p>
-    <label>Username:</label>
-    <input type="text" name="username">
+    <label>Pseudonyme:</label>
+        <input type="text" name="username">
   </p>
   <p>
-    <label>Password:</label>
+    <label>Mot de passe:</label>
     <input type="text" name="password">
   </p>
   <p>
