Adding user management for admin

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,5 @@
 <% var title = 'Dashboard Administration' %>
 <% include head %>
-<a href="/admin/products">G&eacuterer les produits</a>
-<a href="/admin/users">G&eacuterer les utilisateurs</a>
+<a href="/admin/product">G&eacuterer les produits</a>
+<a href="/admin/user">G&eacuterer les utilisateurs</a>
 <% include foot %>
