--- a/views/editProduit.ejs
+++ b/views/editProduit.ejs
@@ -9,7 +9,7 @@
     </p>
     <p>
         <label>Description:</label>
-        <textarea name="description" value="<%=product.description%>">Description du produit</textarea>
+        <textarea name="description"><%=product.description%></textarea>
     </p>
     <p>
         <label>Prix:</label>
