User management (edit, password, disconnection)

--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -2,7 +2,7 @@
 <% include head %>
 
 <h1>Formulaire de modification du profil</h1>
-<form method="post" action="">
+<form method="post" action="/user/edit">
     <p>
         <label>Nom:</label>
         <input type="text" name="lastname" value="<%=user.lastname%>">
