--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,7 @@
 
 <p>Hello <%=user.firstname%> <%=user.lastname%></p>
 <a href="/user/edit">Modifier le profil</a>
-
+<a href="/user/password">Modifier le mot de passe</a>
+<a href="/user/disconnect">Deconnexion</a>
 
 <% include foot %>
