--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,5 +1,6 @@
 <% var title = 'Dashboard Administration' %>
 <% include head %>
 <a href="/admin/product">G&eacuterer les produits</a>
+<a href="/admin/category">G&eacuterer les cat&eacutegories</a>
 <a href="/admin/user">G&eacuterer les utilisateurs</a>
 <% include foot %>
