--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,11 +10,12 @@ Accés au <a href="/profile">/profil</a>
   </p>
   <p>
     <label>Mot de passe:</label>
-    <input type="text" name="password">
+    <input type="password" name="password">
   </p>
   <p>
     <input type="submit" value="Login">
   </p>
+  <a href="/register">S'inscrire</a>
 </form>
 
 <% include foot %>
