--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
     </p>
     <p>
     <label>Mot de passe:</label>
-<input type="text" name="password">
+<input type="password" name="password">
     </p>
     <p>
     <label>Pr&eacutenom:</label>
@@ -20,7 +20,8 @@
     <input type="text" name="lastname">
     </p>
     <p>
-    <input type="submit" value="Register">
+    <input type="submit" value="S'inscrire">
     </p>
     </form>
+    <a href="/login">D&eacutej&agrave inscrit ?</a>
     <% include foot %>
