Check if already connected / starting to check administration rights

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,6 +4,6 @@
 <p>Hello <%=user.firstname%> <%=user.lastname%></p>
 <a href="/user/edit">Modifier le profil</a>
 <a href="/user/password">Modifier le mot de passe</a>
-<a href="/user/disconnect">Deconnexion</a>
+<a href="/user/disconnect">D&eacuteconnexion</a>
 
 <% include foot %>
