--- a/views/editPwd.ejs
+++ b/views/editPwd.ejs
@@ -4,7 +4,7 @@
 <script>
     function verif(){
         if(document.modifpwd.new_password.value != document.modifpwd.confirm_new_password.value){
-            alert("Les deux nouveaux mots de passe ne correspondent pas.");
+            alert("Les mots de passe ne correspondent pas.");
             return false;
         }
     }
