--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -1,17 +1,21 @@
 <% var title = 'Modification profil' %>
 <% include head %>
 
-<h1>Formulaire de modification du profil</h1>
-<form method="post" action="/user/edit">
-    <p>
-        <label>Nom:</label>
-        <input type="text" name="lastname" value="<%=user.lastname%>">
-    </p>
-    <p>
-        <label>Prénom:</label>
-        <input type="text" name="firstname" value="<%=user.firstname%>">
-    </p>
-    <input type="submit" value="Modifier">
-</form>
+<div class="columns">
+    <div class="column is-one-third">
+        <h1 class="title is-3-desktop">Modification du profil</h1>
+        <form method="post" action="/user/edit">
+            <p>
+                <label class="label">Nom:</label>
+                <input class="input" type="text" name="lastname" value="<%=user.lastname%>">
+            </p>
+            <p>
+                <label class="label">Pr&eacutenom:</label>
+                <input class="input" type="text" name="firstname" value="<%=user.firstname%>">
+            </p><br>
+            <input class="button is-primary" type="submit" value="Modifier">
+        </form>
+    </div>
+</div>
 
 <% include foot %>
