--- a/views/editListUser.ejs
+++ b/views/editListUser.ejs
@@ -1,24 +1,31 @@
 <% var title = 'Gestion des utilisateurs' %>
 <% include head %>
 
-<h1>Liste des utilisateurs</h1>
-<table>
-    <tr>
-        <th>Id_user</th>
-        <th>Pseudonyme</th>
-        <th>Pr&eacute</th>
-        <th>Nom</th>
-    </tr>
-    <% users.forEach(function(user){ %>
-    <tr>
-        <td><%=user.id_user%> </td>
-        <td><%=user.username%></td>
-        <td><%=user.firstname%></td>
-        <td><%=user.lastname%></td>
-        <td><a href="/admin/user/edit/<%=user.id_user%>">Modifier</a></td>
-        <td><a href="/admin/user/delete/<%=user.id_user%>">Supprimer</a></td>
-    </tr>
-    <% })%>
-    <table>
+<div class="columns is-centered">
+    <div class="column is-three-fifths">
+        <div class="box">
+            <h1 class="title is-3-desktop">Liste des utilisateurs</h1>
+            <table class="table is-striped is-hoverable is-fullwidth">
+                <tr>
+                    <th>Id_user</th>
+                    <th>Pseudonyme</th>
+                    <th>Pr&eacutenom</th>
+                    <th>Nom</th>
+                </tr>
+                <% users.forEach(function(user){ %>
+                <tr>
+                    <td><%=user.id_user%> </td>
+                    <td><%=user.username%></td>
+                    <td><%=user.firstname%></td>
+                    <td><%=user.lastname%></td>
+                    <td><a href="/admin/user/edit/<%=user.id_user%>">Modifier</a></td>
+                    <td><a href="/admin/user/delete/<%=user.id_user%>">Supprimer</a></td>
+                </tr>
+                <% })%>
+            </table>
+            <a class="button is-primary is-outlined" href="/admin">Retour au dashboard</a>
+        </div>
+    </div>
+</div>
 
 <% include foot %>
