--- a/views/editProduit.ejs
+++ b/views/editProduit.ejs
@@ -1,28 +1,32 @@
-<% var title = 'Formulaire ajout produit' %>
+<% var title = 'Modification produit' %>
 <% include head %>
 
-<h1>Formulaire édition produit</h1>
-<form method="post" action="/product/edit/<%=product.id_prod%>">
-    <p>
-        <label>Nom:</label>
-        <input type="text" name="name" value="<%=product.name%>">
-    </p>
-    <p>
-        <label>Description:</label>
-        <textarea name="description"><%=product.description%></textarea>
-    </p>
-    <p>
-        <label>Prix:</label>
-        <input type="number" name="price" value="<%=product.price%>">
-        <label>€</label>
-    </p>
-    <p>
-        <label>Stock:</label>
-        <input type="number" name="stock" value="<%=product.stock%>">
-        <label>unit&eacute(s)</label>
-    </p>
-    <p>
-        <input type="submit" value="Modifier">
-    </p>
-</form>
+<div class="columns">
+    <div class="column is-one-third">
+        <h1 class="title is-3-desktop">Modification du produit</h1>
+        <form method="post" action="/admin/product/edit/<%=product.id_prod%>">
+            <p>
+                <label class="label">Nom :</label>
+                <input class="input" type="text" name="name" value="<%=product.name%>">
+            </p>
+            <p>
+                <label class="label">Description :</label>
+                <textarea class="textarea" name="description"><%=product.description%></textarea>
+            </p>
+            <p>
+                <label class="label">Prix en € :</label>
+                <input class="input" type="number" name="price" value="<%=product.price%>">
+            </p>
+            <p>
+                <label class="label">Stock :</label>
+                <input class="input" type="number" name="stock" value="<%=product.stock%>">
+            </p>
+            <br>
+            <p>
+                <input class="button is-primary is-outlined" type="submit" value="Modifier">
+                <a class="button is-primary is-danger is-outlined" href="/admin/product">Annuler</a>
+            </p>
+        </form>
+    </div>
+</div>
 <% include foot %>
