--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -1,20 +1,24 @@
 <% var title = 'Modification profil' %>
 <% include head %>
 
-<div class="columns">
+
+<div class="columns is-centered">
     <div class="column is-one-third">
-        <h1 class="title is-3-desktop">Modification du profil</h1>
-        <form method="post" action="/user/edit">
-            <p>
-                <label class="label">Nom:</label>
-                <input class="input" type="text" name="lastname" value="<%=user.lastname%>">
-            </p>
-            <p>
-                <label class="label">Pr&eacutenom:</label>
-                <input class="input" type="text" name="firstname" value="<%=user.firstname%>">
-            </p><br>
-            <input class="button is-primary" type="submit" value="Modifier">
-        </form>
+        <div class="box">
+            <h1 class="title is-3">Modification du profil</h1>
+            <form method="post" action="/user/edit">
+                <p>
+                    <label class="label">Nom:</label>
+                    <input class="input" type="text" name="lastname" value="<%=user.lastname%>">
+                </p>
+                <p>
+                    <label class="label">Pr&eacutenom:</label>
+                    <input class="input" type="text" name="firstname" value="<%=user.firstname%>">
+                </p><br>
+                <input class="button is-primary is-outlined" type="submit" value="Modifier">
+                <a class="button is-primary is-danger is-outlined" href="/profile">Annuler</a>
+            </form>
+        </div>
     </div>
 </div>
 
