--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,5 +3,23 @@
 <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+
 </head>
-<body>
+<body style="height: 752px;background-image:url(/img/back.jpg);background-position:center ">
+<nav class="navbar is-primary" style="background-color: #904776" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+        <a class="navbar-item" href="/">
+            <img src="/img/logo.png" alt="Logo : Kupo Shop">
+        </a>
+        <p class="navbar-item has-text-white">Kupo Shop</p>
+    </div>
+    <div class="navbar-start">
+        <p class="navbar-item"></p>
+        <a class="navbar-item has-text-white" href="/user/category">Catégorie, kupo.</a>
+        <a class="navbar-item has-text-white" href="/user/product">Produit, kupopo...</a>
+        <a class="navbar-item has-text-white" href="/profile">Profil, kupo !</a>
+    </div>
+    <div class="navbar-end">
+        <a class="navbar-item has-text-white" href="/user/disconnect">D&eacuteconnexion</a>
+    </div>
+</nav>
