--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,11 +3,12 @@
 
 <div class="columns is-centered">
     <div class="column is-half has-text-centered">
-        <h1 class="title is-3-desktop">Profil de <%=user.username%></h1>
-        <p>Bonjour <%=user.firstname%> <%=user.lastname%>.</p><br>
-        <a class="button is-primary" href="/user/edit">Modifier le profil</a>
-        <a class="button is-primary" href="/user/password">Modifier le mot de passe</a>
-        <a class="button is-primary" href="/user/disconnect">D&eacuteconnexion</a>
+        <div class="box" style="height:120%">
+            <h1 class="title is-3-desktop">Profil de <%=user.username%></h1>
+            <p>Bonjour <%=user.firstname%> <%=user.lastname%>.</p><br>
+            <a class="button is-primary is-outlined" href="/user/edit">Modifier le profil</a>
+            <a class="button is-primary is-outlined" href="/user/password">Modifier le mot de passe</a>
+        </div>
     </div>
 </div>
 
