Adding categories, product per categories pages, fixed some titles

--- a/views/addCategory.ejs
+++ b/views/addCategory.ejs
@@ -1,4 +1,4 @@
-<% var title = 'Formulaire ajout cat&eacutegorie' %>
+<% var title = 'Formulaire ajout catégorie' %>
 <% include head %>
 
 <h1>Formulaire ajout de cat&eacutegorie</h1>
