--- a/views/editListCategory.ejs
+++ b/views/editListCategory.ejs
@@ -1,4 +1,4 @@
-<% var title = 'Gestion des cat&eacutegories' %>
+<% var title = 'Gestion des catégories' %>
     <% include head %>
 
 <h1>Liste des cat&eacutegories</h1>
