--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -2,7 +2,7 @@
 <% include head %>
 
 <h1>Formulaire édition produit</h1>
-<form method="post" action="/product/edit/<%=product.id_prod%>">
+<form method="post" action="/admin/product/edit/<%=product.id_prod%>">
     <p>
         <label>Nom:</label>
         <input type="text" name="name" value="<%=product.name%>">
@@ -20,6 +20,14 @@
         <label>Stock:</label>
         <input type="number" name="stock" value="<%=product.stock%>">
         <label>unit&eacute(s)</label>
+    </p>
+    <p>
+        <label>Cat&eacutegorie:</label>
+        <select name="category">
+            <%categories.forEach(function(category){%>
+            <option value="<%=category.id_cat%>" <%if (category.id_cat == product.categoryIdCat){ %> selected <% }%>><%=category.name%></option>
+            <% })%>
+        </select>
     </p>
     <p>
         <input type="submit" value="Modifier">
