--- a/views/addCategory.ejs
+++ b/views/addCategory.ejs
@@ -1,20 +1,22 @@
 <% var title = 'Ajout cat&eacutegorie' %>
 <% include head %>
 
-<div class="columns">
+<div class="columns is-centered">
     <div class="column is-one-third">
-        <h1 class="title is-3-desktop">Ajout d'une cat&eacutegorie</h1>
-        <form method="post" action="/admin/category/add">
-            <p>
-                <label class="label">Nom:</label>
-                <input class="input" type="text" name="name">
-            </p>
-            <br>
-            <p>
-                <input class="button is-primary is-outlined" type="submit" value="Ajouter">
-                <a class="button is-primary is-danger is-outlined" href="/admin/category">Annuler</a>
-            </p>
-        </form>
+        <div class="box">
+            <h1 class="title is-3-desktop">Ajout d'une cat&eacutegorie</h1>
+            <form method="post" action="/admin/category/add">
+                <p>
+                    <label class="label">Nom:</label>
+                    <input class="input" type="text" name="name">
+                </p>
+                <br>
+                <p>
+                    <input class="button is-primary is-outlined" type="submit" value="Ajouter">
+                    <a class="button is-primary is-danger is-outlined" href="/admin/category">Annuler</a>
+                </p>
+            </form>
+        </div>
     </div>
 </div>
 
