--- a/views/head.ejs
+++ b/views/head.ejs
@@ -15,9 +15,8 @@
     </div>
     <div class="navbar-start">
         <p class="navbar-item"></p>
-        <a class="navbar-item has-text-white" href="/user/category">Catégorie, kupo.</a>
-        <a class="navbar-item has-text-white" href="/user/product">Produit, kupopo...</a>
-        <a class="navbar-item has-text-white" href="/profile">Profil, kupo !</a>
+        <a class="navbar-item has-text-white" href="/category">Catégorie, kupo.</a>
+        <a class="navbar-item has-text-white" href="/profile">Profil, kupopo !</a>
     </div>
     <div class="navbar-end">
         <a class="navbar-item has-text-white" href="/user/disconnect">D&eacuteconnexion</a>
